# pendulum-prototype

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  cloudbuild.yaml  docker-compose.yml  rust-toolchain.toml
.devcontainer/: devcontainer.json
common/: Cargo.toml
common/src/: currency.rs  lib.rs  stellar_asset.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/stellar-bridge/: Cargo.toml
pallets/stellar-bridge/src/: horizon.rs  lib.rs
pallets/stellar-watch/: Cargo.toml
pallets/stellar-watch/src/: lib.rs  string.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: address_conv.rs  balance_conv.rs  currency_conv.rs  lib.rs  stellar_assets.rs
scripts/: docker_run.sh
