[package]
name = "pendulum-common"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = '3.0', default-features = false }
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }


[features]
default = ['std']
std = [
	"codec/std",
	"sp-runtime/std"
]
