[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate' }

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

# Substrate dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate' }
sc-cli = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate' }
sc-client-api = { git = 'https://github.com/paritytech/substrate' }
sc-consensus = { git = 'https://github.com/paritytech/substrate' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate' }
sc-executor = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate' }
sc-keystore = { git = 'https://github.com/paritytech/substrate' }
sp-keystore = { git = 'https://github.com/paritytech/substrate' }
sc-rpc = { git = 'https://github.com/paritytech/substrate' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate' }
sc-service = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate' }
sp-api = { git = 'https://github.com/paritytech/substrate' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate' }
sp-consensus = { git = 'https://github.com/paritytech/substrate' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate' }
sp-core = { git = 'https://github.com/paritytech/substrate' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate' }
sp-inherents = { git = 'https://github.com/paritytech/substrate' }
sp-runtime = { git = 'https://github.com/paritytech/substrate' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate' }

# local dependencies
node-template-runtime = { path = '../runtime' }

[features]
default = []
ocw = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
