[package]
authors = ['Pendulum team <https://github.com/pendulum-chain>']
build = 'build.rs'
description = 'Pendulum chain PoC node'
edition = '2018'
homepage = 'http://pendulumchain.org/'
license = 'Unlicense'
name = 'pendulum-node'
repository = 'https://github.com/pendulum-chain/pendulum-prototype'
version = '3.0.0'

[[bin]]
name = 'pendulum-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

# Substrate dependencies
frame-benchmarking = '3.1.0'
frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
pallet-contracts = '3.0.0'
pallet-contracts-primitives = '3.0.0'
pallet-contracts-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-aura = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sp-keystore = '0.9.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-telemetry = '3.0.0'
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-aura = '0.9.0'
sp-core = '3.0.0'
sp-std = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'
substrate-stellar-sdk = '0.2.2'

# local dependencies
pendulum-node-runtime = { path = '../runtime', version = '3.0.0' }

[features]
default = []
ocw = []
runtime-benchmarks = ['pendulum-node-runtime/runtime-benchmarks']
