[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate' }

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.2.0' }
hex-literal = { version = '0.3.1' }
serde = { version = "1.0.119", optional = true, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate' }
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate' }
frame-system-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate' }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-assets = { default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-tracing = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate' }
substrate-stellar-sdk = { version = '0.1.6', default-features = false }

pallet-stellar-bridge = { version = "0.1.0", default-features = false, path = "../pallets/stellar-bridge" }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-assets/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-stellar-bridge/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-tracing/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
