[package]
name = "pallet-stellar-bridge"
version = "0.1.0"
authors = ["Gonza <gonzalo@satoshipay.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
parking_lot = '0.11'
# https://github.com/serde-rs/json/pull/606
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }

# Substrate packages
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-arithmetic = { version = '3.0', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-io = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
sp-keystore = { version = '0.9', optional = true }
pallet-balances = { version = '3.0.0', default-features = false }
pallet-transaction-payment = { version = '3.0.0', default-features = false }
substrate-stellar-sdk = { version = '0.1.4', default-features = false }

orml-currencies = {default-features = false, version = '0.4.0'}
orml-tokens = {default-features = false, version = "0.4.0"}
orml-traits = { default-features = false, version = '0.4.0' }
orml-utilities = { default-features = false, version = '0.4.0' }

[features]
default = ['std']
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	'orml-currencies/std',
	'orml-tokens/std',
	'orml-traits/std',
	'orml-utilities/std'
]
