[package]
name = "pallet-stellar-bridge"
version = "0.1.0"
authors = ["Gonza <gonzalo@satoshipay.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
parking_lot = '0.11'
# https://github.com/serde-rs/json/pull/606
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }

# Substrate packages
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false }
sp-arithmetic = { git = 'https://github.com/paritytech/substrate', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false }
sp-tracing = { git = 'https://github.com/paritytech/substrate', default-features = false }
sp-keystore = { git = 'https://github.com/paritytech/substrate', optional = true }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', default-features = false }
substrate-stellar-sdk = { path = '../../../substrate-stellar-sdk', default-features = false }

[features]
default = ['std']
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-tracing/std",
	"sp-keystore/std",
]
